# memo_app

./: .env  .gitignore  Dockerfile  README.md  all.sh  api.py  app.py  config.py  db.sqlite3  docker-compose.yaml  entrypoint.sh  forms.py  main.py  models.py  package-lock.json  pyproject.toml  requirements.txt  routes.py  utils.py
instance/: db.sqlite3  memo.db
migrations/: env.py
migrations/versions/: ec2232bb9c71_extend_password_length.py
pgdata/: postmaster.pid
pgdata/base/1/: 2619  pg_internal.init
pgdata/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16660  16661  16665  16667  16669  16670  16674  16676  16678  16679  16684  16685  16692  16695  16714  16717  2224  2579  2604  2606  2606_fsm  2608  2609  2609_vm  2610  2610_fsm  2615  2615_vm  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  (+27 more)
pgdata/base/4/: 2619
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pgdata/pg_xact/: 0000
templates/: base.html  edit.html  index.html  login.html  register.html
