[project]
name = "memo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "config>=0.5.1",
    "flask>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "routes>=2.5.1",
]
